# csmania

./: CMakeLists.txt
src/: CMakeLists.txt  error.cpp  error.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h  settings.cpp  settings.h  settings.ui  utils.cpp  utils.h
